feat: add expense CRUD
