# controllers/dto.go
@@ -19,3 +19,21 @@ type LoginData struct {
 	Name   string `json:"name"`
 	Email  string `json:"email"`
 }
+
+// CreateExpenseRequest represents the request body for creating an expense.
+type CreateExpenseRequest struct {
+	Title       string  `json:"title"`
+	Amount      float64 `json:"amount"`
+	Category    string  `json:"category"`
+	Note        string  `json:"note"`
+	ExpenseDate string  `json:"expense_date"`
+}
+
+// UpdateExpenseRequest represents the request body for updating an expense.
+type UpdateExpenseRequest struct {
+	Title       string  `json:"title"`
+	Amount      float64 `json:"amount"`
+	Category    string  `json:"category"`
+	Note        string  `json:"note"`
+	ExpenseDate string  `json:"expense_date"`
+}
